2012-09-13  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/Makefile.win: Added more explicit statement
	about the need to set R_HOME on Windows to run the binaries, or to
	install RInside from sources on Windows so that R_HOME is set that way

2012-09-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.8

2012-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Include local headers from src/
	* src/Makevars{.win}: Declare explicit dependency on headers for
	RInside.cpp

2012-09-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Updating required headers here now
	* src/Makevars.win: Updating required headers here now
	* configure: Deprecated, no longer used or installed
	* configure.win: Deprecated, no longer used or installed
	* inst/examples/standard/Makefile.win: R_ARCH autodetection

2012-09-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.win: Ensure static library is copied to target on both
	architectures

2012-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/eigen/cmake/CMakeLists.txt: Added a second patch by
	Peter to support compilation on Windows
	* inst/examples/armadillo/cmake/CMakeLists.txt: idem

2012-08-13  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/eigen/cmake/CMakeLists.txt: Added Peter's patch
	* inst/examples/armadillo/cmake/CMakeLists.txt: idem

2012-08-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.7

	* inst/examples/eigen/: New example directory for Eigen
	* inst/examples/eigen/rinside_eigen0.cpp: simple first example
	* inst/examples/eigen/rinside_eigen1.cpp: second example

2012-08-10  Dirk Eddelbuettel  <edd@dexter>

	* inst/examples/armadillo/: New example directory for Armadillo
	* inst/examples/armadillo/rinside_arma0.cpp: simple first example
	* inst/examples/armadillo/rinside_arma1.cpp: second example

2012-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample12.cpp: New example
